force-app/main/default/objects/Incompatibilit_Options__c/Incompatibilit_Options__c.object-meta.xml
<CustomObject>
    <label>Incompatibilité Options</label>
    <nameField>
        <label>Nom de Incompatibilité Options</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incompatibilités Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>