force-app/main/default/objects/Incompatibilit_Options__c/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enregistrement actif
GC_incopt.valide = 0</description>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>