force-app/main/default/objects/Incompatibilit_Options__c/fields/CodeFils__c.field-meta.xml
<CustomField>
    <fullName>CodeFils__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Fils</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Incompatibilités Options</relationshipLabel>
    <relationshipName>Incompatibilit_s_Options</relationshipName>
    <type>Lookup</type>
</CustomField>