force-app/main/default/objects/Incompatibilit_Options__c/fields/CodePere__c.field-meta.xml
<CustomField>
    <fullName>CodePere__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Père</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Incompatibilités Options (Code Père)</relationshipLabel>
    <relationshipName>Incompatibilit_s_Options1</relationshipName>
    <type>Lookup</type>
</CustomField>