force-app/main/default/objects/Incompatibilit_Options__c/fields/idTiers__c.field-meta.xml
<CustomField>
    <fullName>idTiers__c</fullName>
    <externalId>true</externalId>
    <label>ID Tiers</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>