force-app/main/default/objects/Incompatibilit_Options__c/listViews/TARIF_29_04_2014.listView-meta.xml
<ListView>
    <fullName>TARIF_29_04_2014</fullName>
    <columns>NAME</columns>
    <columns>CodePere__c</columns>
    <columns>CodeFils__c</columns>
    <filterScope>Everything</filterScope>
    <label>TARIF 29/04/2014</label>
    <language>fr</language>
</ListView>